# gnome-file-browser-applet

./: CMakeLists.txt  HISTORY  INSTALL  README  cmake_uninstall.cmake.in  description-pak
data/: CMakeLists.txt  GNOME_FileBrowserApplet_Factory.server.in  file-browser-applet.desktop  file-browser-applet.schemas  file-browser-applet.ui
doc/C/: file-browser-applet.xml
pixmaps/: CMakeLists.txt
src/: BaseItem.cc  BaseItem.h  CMakeLists.txt  ContextMenu.cc  ContextMenu.h  DesktopItem.cc  DesktopItem.h  DirectoryItem.cc  DirectoryItem.h  DirectoryListing.cc  DirectoryListing.h  FileItem.cc  FileItem.h  ItemBase.cc  ItemBase.h  Items.cc  Items.h  MenuBrowser.cc  MenuBrowser.h  MenuHeader.cc  MenuHeader.h  PanelMenuBar.cc  PanelMenuBar.h  Preferences.cc  Preferences.h  TrayIcon.cc  TrayIcon.h  Utils.cc  Utils.h  main.cc
