SET (SCHEMA ${EXEC}.schemas)
SET (BUILDER_UI ${EXEC}.ui)
SET (DESKTOP ${EXEC}.desktop)

#INSTALL (FILES ${SCHEMA}  DESTINATION "${CMAKE_INSTALL_GCONF_SCHEMA_DIR}")
#INSTALL (FILES ${BUILDER_UI} DESTINATION "${CMAKE_INSTALL_BUILDER_UI_DIR}")
INSTALL (FILES ${DESKTOP} DESTINATION "${CMAKE_INSTALL_PREFIX}/share/applications")

#INSTALL (CODE "EXEC_PROGRAM (\"export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && gconftool-2 --makefile-install-rule ${CMAKE_INSTALL_GCONF_SCHEMA_DIR}/${SCHEMA}\")")
